--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,45 @@
 @import "tailwindcss";
+
+@theme {
+
+    --color-main-primary: oklch(0.28 0.0181 241.71);
+    --color-main-secondary: oklch(0.34 0.0244 248.55);
+    --color-main-tertiary: oklch(0.47 0.0254 246.22);
+    --color-accent-primary: oklch(0.4 0.0709 229.86);
+    --color-accent-light: oklch(0.88 0.0094 150.67);
+    --color-accent-dark: oklch(0.27 0.0242 253.69);
+}
+
+@layer utilities {
+    .text-head {
+        @apply text-[84px] font-black leading-[84px];
+    }
+
+    .text-mobile-head {
+        @apply text-[64px] font-black leading-[64px];
+    }
+
+    .text-subhead {
+        @apply text-[48px] font-black leading-[56px];
+    }
+
+    .text-desc {
+        @apply text-[20px] font-light leading-[24px];
+    }
+
+    .text-label {
+        @apply text-[32px] font-semibold leading-[40px];
+    }
+
+    .text-body1 {
+        @apply text-[22px] font-light leading-[26px];
+    }
+
+    .text-body2 {
+        @apply text-[20px] font-light leading-[24px];
+    }
+
+    .text-mini {
+        @apply text-[14px] font-semibold leading-[18px];
+    }
+}
